# atomic-cloud

./: .gitignore  404.html  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  flake.nix  index.html  mkdocs.yml  package.json  run.sh  rust-toolchain.toml  shell.nix
cli/: Cargo.toml  build.rs  index.html  setup.iss
cli/src/: application.rs  cli.rs  main.rs  menu.rs  storage.rs
cli/src/application/: menu.rs  network.rs  profile.rs  prompt.rs  tabs.rs  util.rs  window.rs
cli/src/application/menu/: connection.rs  create_profile.rs  delete_profile.rs  load_profile.rs  start.rs
cli/src/application/network/: connection.rs  known_host.rs  verifier.rs
cli/src/application/profile/: manager.rs
cli/src/application/util/: area.rs  button.rs  center.rs  fancy_toml.rs  input.rs  list.rs  status.rs
cli/src/application/window/: connect.rs  create.rs  delete.rs  start.rs  tls.rs
cli/src/menu/: create_profile.rs  delete_profile.rs  load_profile.rs  start.rs
clients/wrapper/: Cargo.toml  build.rs
clients/wrapper/src/: application.rs  args.rs  cli.rs  main.rs  wrapper.rs
clients/wrapper/src/application/: detection.rs  heart.rs  network.rs  process.rs  transfer.rs  user.rs
clients/wrapper/src/wrapper/: detection.rs  heart.rs  network.rs  process.rs  transfer.rs  user.rs
common/: Cargo.toml
common/src/: allocator.rs  cache.rs  config.rs  error.rs  file.rs  init.rs  lib.rs  name.rs  network.rs  tick.rs  version.rs
controller/: .gitignore  .luarc.json  Cargo.toml  build.rs  index.html  proto  run.sh
controller/application/: Cargo.toml  build.rs
controller/application/src/: cli.rs  config.rs  controller.rs  driver.rs  group.rs  main.rs  network.rs  node.rs  server.rs
controller/application/src/config/: auto_complete.rs  validators.rs
controller/application/src/controller/: auth.rs  driver.rs  group.rs  node.rs  server.rs
controller/application/src/driver/: wasm.rs
controller/application/src/network/: admin.rs  auth.rs  server.rs
controller/configs/: config.toml  wasm-engine.toml  wasm-plugins.toml
controller/configs/lua/: testing.lua
controller/drivers/: index.html
controller/drivers/libs/: inspect.lua
controller/drivers/lua/configs/: testing.lua
controller/drivers/lua/testing/: driver.lua
controller/drivers/pelican/: Cargo.toml  api.lua  build.sh  driver.lua  local.toml  wit
controller/drivers/pelican/src/: config.rs  driver.rs  lib.rs  log.rs  main.rs
controller/drivers/pterodactyl/: Cargo.toml
controller/drivers/pterodactyl/src/: config.rs  driver.rs  main.rs
controller/drivers/wasm/: index.html
controller/drivers/wasm/permissions/: index.html
controller/installation/docker/: index.html
controller/installation/normal/: index.html
controller/nodes/: home.toml
controller/retrieve_token/: index.html
controller/run/: run.sh
controller/run/drivers/wasm/: pelican.wasm
controller/run/nodes/examples/: example.toml
controller/scripts/: build-pelican.sh  build_drivers.sh
controller/src/: application.rs  args.rs  config.rs  controller.rs  driver.rs  main.rs  network.rs  node.rs  resource.rs  storage.rs  task.rs  version.rs
controller/src/application/: auth.rs  cloudlet.rs  deployment.rs  driver.rs  event.rs  global.rs  group.rs  node.rs  plugin.rs  server.rs  subscriber.rs  subscription.rs  tls.rs  unit.rs  user.rs
controller/src/application/auth/: manager.rs  permissions.rs  server.rs  service.rs  user.rs  validator.rs
controller/src/application/driver/: process.rs  wasm.rs
controller/src/application/event/: channel.rs  transfer.rs
controller/src/application/group/: manager.rs
controller/src/application/node/: manager.rs
controller/src/application/plugin/: manager.rs  runtime.rs
controller/src/application/server/: guard.rs  manager.rs  screen.rs
controller/src/application/subscriber/: dispatcher.rs  manager.rs  watcher.rs
controller/src/application/subscription/: manager.rs
controller/src/application/user/: manager.rs  transfer.rs
controller/src/controller/: auth.rs  channel.rs  driver.rs  event.rs  group.rs  node.rs  server.rs  user.rs
controller/src/controller/driver/: wasm.rs
controller/src/controller/event/: channel.rs  transfer.rs
controller/src/controller/user/: transfer.rs
controller/src/driver/: http.rs  lua.rs  pelican.rs  wasm.rs
controller/src/network/: admin.rs  auth.rs  client.rs  manage.rs  proto.rs  server.rs  stream.rs  tls.rs  unit.rs
controller/src/network/client/: beat.rs  group.rs  health.rs  notify.rs  ready.rs  reset.rs  running.rs  server.rs  stop.rs  transfer.rs  user.rs
controller/src/network/manage/: group.rs  node.rs  plugin.rs  power.rs  resource.rs  server.rs  transfer.rs  user.rs
controller/src/task/: manager.rs  network.rs  plugin.rs
controller/structure/wit/: driver.wit
controller/wit/: driver.wit
drivers/local/: Cargo.toml
drivers/local/src/: driver.rs  log.rs  main.rs  storage.rs
drivers/local/src/driver/: cloudlet.rs  config.rs  template.rs
drivers/local/templates/paper/: template.toml
drivers/local/templates/papermc/: template.toml
drivers/pterodactyl/: Cargo.toml  build.rs
drivers/pterodactyl/eggs/: egg-paper.json
drivers/pterodactyl/src/: config.rs  driver.rs  log.rs  main.rs  storage.rs
drivers/pterodactyl/src/driver/: backend.rs  cloudlet.rs  node.rs
plugins/cloudflare/: Cargo.toml  build.rs
plugins/cloudflare/configs/: config.toml
plugins/cloudflare/src/: listener.rs  main.rs  plugin.rs  storage.rs
plugins/cloudflare/src/dummy/: mod.rs  node.rs  screen.rs
plugins/cloudflare/src/plugin/: backend.rs  batcher.rs  config.rs  dns.rs  math.rs
plugins/local/: Cargo.toml
plugins/local/configs/: config.toml
plugins/local/src/: driver.rs  listener.rs  log.rs  main.rs  node.rs  plugin.rs  storage.rs  template.rs
plugins/local/src/driver/: cloudlet.rs  config.rs  template.rs
plugins/local/src/node/: screen.rs  server.rs
plugins/local/src/plugin/: config.rs
plugins/pelican/: Cargo.toml
plugins/pelican/configs/: config.toml
plugins/pelican/src/: listener.rs  main.rs  node.rs  plugin.rs  storage.rs
(+566 files in other folders)
