[workspace]
resolver = "2"
members = [
    # Common
    "common",

    # Controller
    "controller",

    # Drivers
    "drivers/pterodactyl",
    "drivers/local",

    # Clients
    "cli",
    "clients/wrapper",
]

[workspace.metadata]
protocol-version = 5

[profile.release]
lto = true
strip = true
