[workspace]
resolver = "2"
members = [
    # Common
    "common",

    # Controller
    "controller",

    # Drivers
    #"plugins/pterodactyl",
    #"plugins/local",

    # Clients
    #"cli",
    #"clients/wrapper",
]

[workspace.metadata]
protocol-version = 6

[profile.release]
lto = true
strip = true
