[workspace]
resolver = "2"
members = [
    # Common
    "common",

    # Controller
    "controller",

    # Plugins
    "plugins/pelican",
    "plugins/local",
    "plugins/cloudflare",

    # Clients
    "cli",
    "clients/wrapper",
]

[workspace.metadata]
protocol-version = 9

[profile.release]
lto = true