[package]
name = "cli"
version = "0.13.0-beta"
edition = "2024"

[dependencies]
# Common
common = { path = "../common" }

# Terminal
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
tui-textarea = "0.7.0"
ansi-parser = "0.9.1"
ansi-to-tui = "7.0.0"

# File management
directories = "6.0.0"

# Error handling
color-eyre = "0.6.5"

# Configuration
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
base64 = "0.22.1"

# Async runtime
tokio-stream = "0.1.17"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "fs", "macros"] }
futures = "0.3.31"

# Network
sha2 = "0.10.9"
prost = "0.14.1"
tower = "0.5.2"
hyper = "1.7.0"
hyper-util = "0.1.16"
url = { version = "2.5.7", features = ["serde"] }
tonic = { version = "0.14.1", features = ["tls-ring"] }
tonic-prost = "0.14.1"
tokio-rustls = { version = "0.26.2", default-features = false, features = ["ring", "tls12"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = ["http2", "ring", "tls12"] }

[build-dependencies]
toml = "0.9.5"
tonic-prost-build = "0.14.1"
winresource = "0.1.23"