[package]
name = "cli"
version = "0.0.0-nightly"
edition = "2024"

[dependencies]
# Common
common = { path = "../common" }

# Terminal
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
ratatui-textarea = "0.8.0"
ansi-parser = "0.9.1"
ansi-to-tui = "8.0.1"

# File management
directories = "6.0.0"

# Error handling
color-eyre = "0.6.5"

# Configuration
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.6"
base64 = "0.22.1"

# Async runtime
tokio-stream = "0.1.18"
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "fs", "macros"] }
futures = "0.3.32"

# Network
sha2 = "0.10.9"
prost = "0.14.3"
tower = "0.5.3"
hyper = "1.8.1"
hyper-util = "0.1.20"
url = { version = "2.5.8", features = ["serde"] }
tonic = { version = "0.14.5", features = ["tls-ring"] }
tonic-prost = "0.14.5"
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = ["http2", "ring", "tls12"] }

[build-dependencies]
toml = "1.0.6"
tonic-prost-build = "0.14.5"
winresource = "0.1.30"