[package]
name = "common"
version = "0.14.0-beta"
edition = "2024"

[dependencies]
# Logging
simplelog = { version = "0.12.2", features = ["paris"] }
colored = "3.1.1"

# Error handling
anyhow = "1.0.102"

# Command line arguments
clap = { version = "4.6.0", features = ["derive"] }

# Configuration
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"