[package]
name = "controller"
version = "0.0.0-nightly"
edition = "2021"

[dependencies]
# Common
common = { path = "../common" }

# Logging
simplelog = { version = "0.12.2", features = ["paris"] }

# Error handling
anyhow = "1.0.98"

# Getters and bitflags
getset = "0.1.6"
bitflags = { version = "2.9.1", features = ["serde"] }

# Signal handling
ctrlc = "3.4.7"

# Server system
uuid = { version = "1.17.0", features = ["v4"] }

# Command line arguments
clap = { version = "4.5.40", features = ["derive"] }

# Regex parsing
regex = "1.11.1"

# Configuration
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"

# Async runtime
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "fs", "process", "macros"] }
tokio-stream = "0.1.17"
futures = "0.3.31"

# Network
tonic = { version = "0.13.1", features = ["tls-ring"] }
url = { version = "2.5.4", features = ["serde"] }
prost = "0.13.5"
rcgen = "0.13.2"

# Plugins
wasmtime = { version = "34.0.1", default-features = false, features = ["addr2line", "threads", "std", "runtime", "demangle", "component-model", "cranelift", "parallel-compilation", "cache"], optional = true }
wasmtime-wasi = { version = "34.0.1", optional = true }
minreq = { version = "2.13.4", features = ["https-rustls"], optional = true }

[build-dependencies]
toml = "0.8.23"
tonic-build = "0.13.1"

[features]
wasm-plugins = ["dep:wasmtime", "dep:wasmtime-wasi", "dep:minreq"]