[package]
name = "controller"
version = "0.0.0-nightly"
edition = "2024"

[dependencies]
# Common
common = { path = "../common" }

# Logging
simplelog = { version = "0.12.2", features = ["paris"] }

# Error handling
anyhow = "1.0.99"

# Getters and bitflags
getset = "0.1.6"
bitflags = { version = "2.9.3", features = ["serde"] }

# Signal handling
ctrlc = "3.4.7"

# Server system
uuid = { version = "1.18.0", features = ["v4"] }

# Command line arguments
clap = { version = "4.5.46", features = ["derive"] }

# Regex parsing
regex = "1.11.2"

# Configuration
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"

# Async runtime
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "fs", "process", "macros"] }
tokio-stream = "0.1.17"
futures = "0.3.31"

# Network
tonic = { version = "0.14.1", features = ["tls-ring"] }
tonic-prost = "0.14.1"
url = { version = "2.5.7", features = ["serde"] }
prost = "0.14.1"
rcgen = "0.14.3"

# Plugins
wasmtime = { version = "40.0.0", default-features = false, features = ["addr2line", "threads", "std", "runtime", "demangle", "component-model", "cranelift", "parallel-compilation", "cache"], optional = true }
wasmtime-wasi = { version = "40.0.0", optional = true }
minreq = { version = "2.14.0", features = ["https-rustls"], optional = true }

[build-dependencies]
toml = "0.9.5"
tonic-prost-build = "0.14.1"

[features]
wasm-plugins = ["dep:wasmtime", "dep:wasmtime-wasi", "dep:minreq"]