[package]
name = "wrapper"
version = "0.0.0-nightly"
edition = "2024"

[dependencies]
# Common
common = { path = "../../common" }

# Logging
simplelog = { version = "0.12.2", features = ["paris"] }

# Error handling
anyhow = "1.0.99"

# Signal handling
ctrlc = "3.4.7"

# User system
uuid = { version = "1.18.0", features = ["v4"] }

# Command line arguments
clap = { version = "4.5.46", features = ["derive"] }

# Regex parsing
regex = "1.11.2"

# Async runtime
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "process"] }

# API
tonic = { version = "0.14.1", features = ["tls-ring"] }
tonic-prost = "0.14.1"
url = "2.5.7"
prost = "0.14.1"

[build-dependencies]
toml = "0.9.5"
tonic-prost-build = "0.14.1"