[package]
name = "wrapper"
version = "0.0.0-nightly"
edition = "2024"

[dependencies]
# Common
common = { path = "../../common" }

# Logging
simplelog = { version = "0.12.2", features = ["paris"] }

# Error handling
anyhow = "1.0.102"

# Signal handling
ctrlc = "3.5.2"

# User system
uuid = { version = "1.22.0", features = ["v4"] }

# Command line arguments
clap = { version = "4.6.0", features = ["derive"] }

# Regex parsing
regex = "1.12.3"

# Async runtime
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros", "process"] }

# API
tonic = { version = "0.14.5", features = ["tls-ring"] }
tonic-prost = "0.14.5"
url = "2.5.8"
prost = "0.14.3"

[build-dependencies]
toml = "0.9.8"
tonic-prost-build = "0.14.5"