[package]
name = "pterodactyl"
version = "0.1.0"
edition = "2021"

[dependencies]
# Common
common = { path = "../../common" }

# Wasm plugin
wit-bindgen = "0.36.0"

# Error handling
anyhow = "1.0.95"

# Logging
colored = "2.2.0"

# Configuration
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"

# Pelican API
url = { version = "2.5.4", features = ["serde"] }
serde_json = "1.0.134"

[build-dependencies]
toml = "0.8.19"