cargo-features = ["per-package-target"]

[package]
name = "cloudflare"
version = "0.0.0-nightly"
edition = "2021"
forced-target = "wasm32-wasip2"

[dependencies]
# Common
common = { path = "../../common" }

# Wasm plugin
wit-bindgen = "0.43.0"

# Error handling
anyhow = "1.0.98"

# Getters
getset = "0.1.6"

# Configuration
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"

# Servers
regex = "1.11.1"

# Cloudflare API
serde_json = "1.0.140"

[build-dependencies]
toml = "0.9.2"