cargo-features = ["per-package-target"]

[package]
name = "cloudflare"
version = "0.0.0-nightly"
edition = "2024"
forced-target = "wasm32-wasip2"

[dependencies]
# Common
common = { path = "../../common" }

# Wasm plugin
wit-bindgen = "0.50.0"

# Error handling
anyhow = "1.0.99"

# Getters
getset = "0.1.6"

# Configuration
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"

# Servers
regex = "1.11.2"

# Cloudflare API
serde_json = "1.0.143"

[build-dependencies]
toml = "0.9.5"