cargo-features = ["per-package-target"]

[package]
name = "cloudflare"
version = "0.0.0-nightly"
edition = "2024"
forced-target = "wasm32-wasip2"

[dependencies]
# Common
common = { path = "../../common" }

# Wasm plugin
wit-bindgen = "0.54.0"

# Error handling
anyhow = "1.0.102"

# Getters
getset = "0.1.6"

# Configuration
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.6"

# Servers
regex = "1.12.3"

# Cloudflare API
serde_json = "1.0.149"

[build-dependencies]
toml = "1.0.6"