cargo-features = ["per-package-target"]

[package]
name = "local"
version = "0.13.0-beta"
edition = "2024"
forced-target = "wasm32-wasip2"

[dependencies]
# Common
common = { path = "../../common" }

# Wasm plugin
wit-bindgen = "0.45.0"

# Error handling
anyhow = "1.0.99"

# Getters
getset = "0.1.6"

# Configuration
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
walkdir = "2.5.0"

[build-dependencies]
toml = "0.9.5"