cargo-features = ["per-package-target"]

[package]
name = "pelican"
version = "0.0.0-nightly"
edition = "2024"
forced-target = "wasm32-wasip2"

[dependencies]
# Common
common = { path = "../../common" }

# Wasm plugin
wit-bindgen = "0.44.0"

# Error handling
anyhow = "1.0.98"

# Configuration
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"

# Pelican API
url = { version = "2.5.4", features = ["serde"] }
serde_json = "1.0.140"

[build-dependencies]
toml = "0.9.2"