cargo-features = ["per-package-target"]

[package]
name = "pelican"
version = "0.14.0-beta"
edition = "2024"
forced-target = "wasm32-wasip2"

[dependencies]
# Common
common = { path = "../../common" }

# Wasm plugin
wit-bindgen = "0.53.1"

# Error handling
anyhow = "1.0.102"

# Configuration
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"

# Pelican API
url = { version = "2.5.8", features = ["serde"] }
serde_json = "1.0.149"

[build-dependencies]
toml = "0.9.8"