[package]
name = "pelican"
version = "0.1.0"
edition = "2021"

[dependencies]
# Wasm plugin
wit-bindgen = "0.26.0"

# Error handling
anyhow = "1.0.86"

# Logging
colored = "2.1.0"

# Configuration
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.13"

# Pelican API
serde_json = "1.0.117"

# Testing
rand = "0.8.5"